Fix hero content not centered

--- a/template/src/components/hero/style.styl
+++ b/template/src/components/hero/style.styl
@@ -13,7 +13,7 @@
     background #000
 
   .content
-    relative 0
+    absolute 0
     flex center
     flex-flow column
     background #0003
